--- a/singolo1.html
+++ b/singolo1.html
@@ -42,13 +42,28 @@
             </div>
     </main>
     <div class=straightMain></div>
-    <footer>
-        <div class="footer">
 
+    <section class="footer">
+        <h2>Our Services</h2>
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus,
+            nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+            tortor mauris condimentum nibh.</p>
+        <div class="flexbox">
+            <article>
+                <img src="/assets/image/pen.svg">
+                <h3>Custom Design</h3>
+                <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+                    ultrices velit.</p>
+            </article>
+            <article>2</article>
+            <article>3</article>
+            <article>4</article>
+            <article>5</article>
         </div>
-    </footer>
+       
+    </section>
 
 
-    
+    <img src="/assets/image/pen.png">
 </body>
 </html>
