feat: add all footer and img om singolo1.html

--- a/singolo1.html
+++ b/singolo1.html
@@ -42,7 +42,6 @@
             </div>
     </main>
     <div class=straightMain></div>
-
     <section class="footer">
         <h2>Our Services</h2>
         <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus,
@@ -50,20 +49,46 @@
             tortor mauris condimentum nibh.</p>
         <div class="flexbox">
             <article>
-                <img src="/assets/image/pen.svg">
+                <img src="assets/image/pen.svg">
                 <h3>Custom Design</h3>
                 <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
                     ultrices velit.</p>
             </article>
-            <article>2</article>
-            <article>3</article>
-            <article>4</article>
-            <article>5</article>
-        </div>
-       
+            <article>
+                <img src="assets/image/bulb.svg">
+                <h3>Inovative Ideas</h3>
+                    <p>Quisque luctus, quam eget molestie com-modo, lacus purus cursus purus, nec rutrum tellus dolor id
+                        lorem.</p>
+            </article>
+            <article>
+                <img src="assets/image/heart.svg">
+                <h3>Love Is The Answer</h3>
+                <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
+                    condimentum.</p></article>
+            <article>
+                <img src="assets/image/phone.svg">
+                <h3>Responsive Layout</h3>
+                <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae-sent elit
+                        leo.</p>
+            </article>
+            <article>
+                <img src="assets/image/bubble.svg">
+                <h3>24 / 7 Support</h3>
+                    <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen-tesque
+                        egestas
+                        venenatis lorem .</p>
+            </article>
+            <article>
+                <img src="assets/image/star.svg">
+                <h3>Feel Like A Star</h3>
+                <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+            </article>
+        </div>      
     </section>
+    <div class="bottomStr">
+    </div>
 
 
-    <img src="/assets/image/pen.png">
+    
 </body>
 </html>
